# AudiClean

./: .gitignore  CMakeLists.txt  README.md  dconfig  demo.sh  setup.sh
.github/workflows/: docs.yml  doxygen.yml
docs/: index.html
docs/html/: BlockingQueue_8cpp.html  BlockingQueue_8cpp__dep__incl.map  BlockingQueue_8cpp__dep__incl.md5  BlockingQueue_8cpp__incl.map  BlockingQueue_8cpp__incl.md5  BlockingQueue_8h.html  BlockingQueue_8h__dep__incl.map  BlockingQueue_8h__dep__incl.md5  BlockingQueue_8h__incl.map  BlockingQueue_8h__incl.md5  BlockingQueue_8h_source.html  CMakeLists_8txt.html  FilterInputNoise_8cpp.html  FilterInputNoise_8cpp__incl.map  FilterInputNoise_8cpp__incl.md5  FilterInputNoise_8h.html  FilterInputNoise_8h__dep__incl.map  FilterInputNoise_8h__dep__incl.md5  FilterInputNoise_8h__incl.map  FilterInputNoise_8h__incl.md5  FilterInputNoise_8h_source.html  FilterInputSignal_8cpp.html  FilterInputSignal_8cpp__incl.map  FilterInputSignal_8cpp__incl.md5  FilterInputSignal_8h.html  FilterInputSignal_8h__dep__incl.map  FilterInputSignal_8h__dep__incl.md5  FilterInputSignal_8h__incl.map  FilterInputSignal_8h__incl.md5  FilterInputSignal_8h_source.html  Fir1_8cpp.html  Fir1_8cpp__incl.map  Fir1_8cpp__incl.md5  Fir1_8h.html  Fir1_8h__dep__incl.map  Fir1_8h__dep__incl.md5  Fir1_8h__incl.map  Fir1_8h__incl.md5  (+191 more)
src/: BlockingQueue.cpp  BlockingQueue.h  CMakeLists.txt  Correlator.cpp  Correlator.h  FilterInputNoise.cpp  FilterInputNoise.h  FilterInputSignal.cpp  FilterInputSignal.h  Fir1.cpp  FirDNF.cpp  FirDNF.h  FirFilter.cpp  FirFilter.h  FirLMS.cpp  FirLMS.h  LinkDNF.cpp  LinkDNF.h  NoiseFilter.cpp  NoiseFilter.h  Plotter.cpp  Plotter.h  SampleCallback.h  SampleLink.cpp  SampleLink.h  SoxEndpoint.cpp  SoxEndpoint.h  SoxReader.cpp  SoxReader.h  WavReader.cpp  WavReader.h  main.cpp
src/cvui/: Makefile  cmake_install.cmake  cvui.h
src/deepNeuronalFilter/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/deepNeuronalFilter/dnf/: Layer.cpp  Layer.h  Net.cpp  Net.h  Neuron.cpp
(+173 files in other folders)
